Fix limit/offset. Add views to spec. Add column comments. Fix spec limit/offset.
